Ingress/fpsvc-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: myfirstapp1
  labels:
    app: myfirstprojectapp1
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myfirstprojectapp1

---

apiVersion: v1
kind: Service
metadata:
  name: myfirstapp2
  labels:
    app: myfirstprojectapp2
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myfirstprojectapp2
