Ingress/newsvc-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: vertex-svc
  labels:
    app: myvertexapp
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: myvertexapp
