Ingress/fpingress-nginx.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: myfirstapp1
                port:
                  number: 80
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: myfirstapp2
                port:
                  number: 80
